# signal-core-ai

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  accept_licenses.ps1  bigbasket_strategy.md  docker-compose.yaml  docker-compose.yml  pyproject.toml  test_api.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
SignalCoreAI/: data_utils.py  dqn_engine.py  network_coordinator.py  ppo_engine.py  rossmann_data_loader.py  scm_engine.py  train_dqn.py
backend/: .env.example  DATA_README.md  Trimart_StoreOps_Master.csv  data_utils.py  generate_bb_dataset.py  generate_suppliers.py  generate_trimart.py  ingredients.py  kafka_gateway.py  main.py  models.py  online_refinement.py  requirements.txt  rl_bridge.py  sample_data.csv  storeops_suppliers_5000.csv  test_full_stack.py  test_kafka_sync.py  test_po.py  test_supplier_upload.py  test_suppliers.csv  test_tms_batching.py
backend/tests/: conftest.py  test_api.py  test_models.py  test_rl_bridge.py  test_workflow.py
k8s/: api-deployment.yaml  api-service.yaml  configmap.yaml  deployment.yaml
scripts/: simulate_bigbasket_signals.py
storeops/: README.md  pubspec.yaml
storeops/android/: settings.gradle.kts
storeops/android/app/: build.gradle.kts
storeops/ios/Runner.xcodeproj/: project.pbxproj
storeops/lib/: main.dart
storeops/linux/: CMakeLists.txt
storeops/test/: widget_test.dart
storeops/web/: index.html  manifest.json
storeops/windows/: CMakeLists.txt
(+29 files in other folders)
