[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "signal-core-ai"
version = "2.0.0"
description = "Agentic RL Supply Chain Engine powering dark store networks."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Omkar Dhumaskar" }
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "pydantic>=2.9.0",
    "python-multipart>=0.0.9",
    "openpyxl>=3.1.0",
    "bcrypt>=4.0.0",
    "torch>=2.0.0",
    "confluent-kafka>=2.2.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "pre-commit>=3.5.0",
    "black>=23.9.1",
    "flake8>=6.1.0",
    "isort>=5.12.0"
]

[tool.setuptools.packages.find]
include = ["backend*", "SignalCoreAI*"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100
